2009-09-19  Chong Yidong  <cyd@stupidchicken.com>

	* time-stamp.el (time-stamp-month-dd-yyyy)
	(time-stamp-dd/mm/yyyy, time-stamp-mon-dd-yyyy)
	(time-stamp-dd-mon-yy, time-stamp-yy/mm/dd)
	(time-stamp-yyyy/mm/dd, time-stamp-yyyy-mm-dd)
	(time-stamp-yymmdd, time-stamp-hh:mm:ss, time-stamp-hhmm): Remove
	functions that have been obsolete since 1995 (Bug#4436).

	* progmodes/sh-script.el (sh-learn-buffer-indent): Pop to the
	indent buffer only if called interactively (Bug#4452).

2009-09-19  Juanma Barranquero  <lekktu@gmail.com>
	    Eli Zaretskii  <eliz@gnu.org>

	This fixes bug#4197 (merged to bug#865, though not identical).
	* server.el (server-auth-dir): Add docstring note about FAT32.
	(server-ensure-safe-dir): Accept FAT32 directories as "safe",
	but warn against using them.

2009-09-19  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-var-update-handler-1): Include case of
	older GDB where there is no has_more field.

2009-09-19  Glenn Morris  <rgm@gnu.org>

	* pgg-pgp.el (pgg-pgp-encrypt-region): Add missing mapconcat separator.

2009-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (auto-mode-alist): Change default for XML files to nXML
	mode (Bug#4169).

2009-09-18  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-ensure-safe-dir): Pass 'integer
	to `file-attributes', as suggested.

2009-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired-aux.el (dired-query-alist): Remove spurious backslash.
	(dired-query): Use read-key.

2009-09-18  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* cus-start.el (ns-use-qd-smoothing): Remove.

2009-09-18  Glenn Morris  <rgm@gnu.org>

	* allout.el (top-level): Remove unnecessary progn.

	* progmodes/js.el (js-end-of-defun): Remove malformed and unneeded let.

	* emacs-lisp/derived.el (define-derived-mode): Fix paren typo in
	definition of abbrev table.

	* speedbar.el (speedbar-track-mouse):
	* net/eudc-bob.el (eudc-bob-pipe-object-to-external-program):